--- a/已经翻译的讲座内容/Topic05_Math_and_Computing/AlgorithmicComplexity.ipynb
+++ b/已经翻译的讲座内容/Topic05_Math_and_Computing/AlgorithmicComplexity.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -26,8 +30,8 @@
     "算法复杂度（Algorithmic complexity）\n",
     "----\n",
     "\n",
-    "数据结构，顾名思义就是用于存储数据的抽象结构。 咱们已经讲过了几个了，比如Python自带的列表list和字典dict等等。\n",
-    "算法，则是用于处理各种数据结构的基本*配方recipes*。 当我们进行更多的计算密集型计算时，就需要更好地理解如何衡量数据结构和算法的性能，以便选择适当策略。"
+    "数据结构，顾名思义就是用于存储数据的抽象结构。 咱们已经讲过几个了，比如Python自带的列表list和字典dict等等。\n",
+    "算法，则是用于处理各种数据结构的基本*配方recipes*。 当我们进行更多的计算密集型计算时，就需要更好地理解如何衡量数据结构和算法的性能，以便选择适当的策略。"
    ]
   },
   {
@@ -41,19 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 loop, best of 3: 2 s per loop\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "# 使用 %timeit 来衡量函数调用需要的时间（to measure function calls）\n",
+    "# 使用 %timeit 来衡量函数执行需要的时间（to measure function calls）\n",
     "def f():\n",
     "    import time\n",
     "    time.sleep(2)\n",
@@ -74,11 +75,11 @@
    "source": [
     "然而，上面这种评分的相当一部分是受到本地硬件配置的影响，所以如果换一台其他的电脑，那这种评分对算法的参考意义就不那么可靠了。怎么来建立一个独立于硬件设备的评分测试基准呢？我们要引入一个大O记号（你可能在微积分课程里面已经看到过了）。大O记号在形式上表示的是函数增长速率方面的特征。\n",
     "\n",
-    "设想你想在一个长度为$ n $的未排序列表中搜索一个项目。一种方法是从开始位置按照顺序对该列表进行扫描，直到找到为止（或者遍历完了也没找到）。 如果要找的这个项确实存在于在列表中，那么平均来看大概就需要扫描其中的（$ n / 2 $）个项来找到目标项。 如果要查找的项不在列表中，就需要扫描所有$ n $个项。 在任何情况下，搜索的复杂性都是随着列表$ n $的长度增长而线性增长。 所以就说这种线性扫描的搜索算法复杂度是$ \\ mathcal {O}（n）$。\n",
+    "设想你要在一个长度为$ n $的未排序列表中搜索一个项目。一种方法是从开始位置按照顺序对该列表进行扫描，直到找到为止（或者遍历完了也没找到）。 如果要找的这个项确实存在于在列表中，那么平均来看大概就需要扫描其中的（$ n / 2 $）个项来找到目标项。 如果要查找的项不在列表中，就需要扫描所有$ n $个项。 在任何情况下，搜索的复杂性都是随着列表$ n $的长度增长而线性增长。 所以就说这种线性扫描的搜索算法复杂度是$ \\ mathcal {O}（n）$。\n",
     "\n",
     "严格来说，应该说 *平均* 的复杂度是$ \\ mathcal {O}（n）$。然后还可以计算一下最差情况（也就是目标项不在列表的情景），这种情况下的这个搜索示例的平均复杂度也是$ \\ mathcal {O}（n）$。 由于最坏情况下可能还需要对输入进行组织（例如，调用一个排序函数来对已排序列表进行排序），因此随机的输入有时就可以到视为平均情况。\n",
     "\n",
-    "更正式地说，我们有一个比较函数$ g（n）$和另一个函数$ f（n）$ 其返回值是要测试的算法在输入大小为$n$ 中执行的“基本操作”的数量。在这个例子中，基本操作就是对两个项目的比较。这在统计学算法中通常是一次浮点运算（FLOP），和两个浮点数的加法、乘法类似。现在，如果$| f（n）/ g（n）| $的比值在$ n $趋于无穷大的时候收敛于$ M $，我们就说$ f（n）$的复杂度为$ g （n）$。例如，如果$ f（n）= 10n ^ 2 $而$ g（n）= n $，那么没有这样的收敛值$ M $，而$ f（n）$ 也就** 不能表示为 ** $ \\ mathcal { O}（n）$，但如果$ g（n）= n ^ 2 $，那么$ M = 10 $ ，这样我们就说$ f（n）$的复杂度是$ \\ mathcal {O}（n ^ 2） $。所以我们的搜索函数是$ \\ mathcal {O}（n）$。正规地说，它实际上也符合$ \\ mathcal {O}（n ^ 2）$以及其他的类型等，但是我们通常总是要选择“最简单的”$ g $函数。我们也不那么啰嗦太多的术语和项目，只使用最高次项来表征复杂度 - 所以不说$ \\ mathcal {O}（n ^ 3 + n ^ 2 + n）$，而只使用最高的三次方$ \\ mathcal {O}（n ^ 3）$。\n",
+    "更正式地说，我们有一个比较函数$ g（n）$和另一个函数$ f（n）$ 其返回值是我们要测试的算法在给定大小为$n$的输入时所执行的“基本操作”的数量。在这个例子中，基本操作就是对两个项目的比较。这在统计学算法中通常是一次浮点运算（FLOP），和两个浮点数的加法、乘法类似。现在，如果$| f（n）/ g（n）| $的比值在$ n $趋于无穷大的时候收敛于$ M $，我们就说$ f（n）$的复杂度为$ g （n）$。例如，如果$ f（n）= 10n ^ 2 $而$ g（n）= n $，那么没有这样的收敛值$ M $，而$ f（n）$ 也就** 不能表示为 ** $ \\ mathcal { O}（n）$，但如果$ g（n）= n ^ 2 $，那么$ M = 10 $ ，这样我们就说$ f（n）$的复杂度是$ \\ mathcal {O}（n ^ 2） $。所以我们的搜索函数是$ \\ mathcal {O}（n）$。正规地说，它实际上也符合$ \\ mathcal {O}（n ^ 2）$以及其他的类型等，但是我们通常总是要选择“最简单的”$ g $函数。我们也不那么啰嗦太多的术语和项目，只使用最高次项来表征复杂度 - 所以不说$ \\ mathcal {O}（n ^ 3 + n ^ 2 + n）$，而只使用最高的三次方$ \\ mathcal {O}（n ^ 3）$。\n",
     "\n",
     "请注意，由于常数部分不能用大O记号表示，所以具有相同的大O复杂度的两种算法完全可能具有相差悬殊的性能！ 但大O记号对于理解我们的算法的*可扩展性*还是很有帮助的。 下面我们将对$ \\ mathcal {O}（n ^ 2）$算法（例如起泡法排序）和$ \\ mathcal {O}（n \\ log {n}）$算法（例如合并排序）进行比较。 其中我们先忽略掉常数因素的差异，因为随着$ n $变大，常数项的影响作用就微不足道了。"
    ]
@@ -87,7 +88,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -145,7 +149,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -160,7 +167,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -193,18 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
-      "Wall time: 4.05 µs\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# 在 Unix 系统里面使用 %%time 来衡量 cell 的运行时间\n",
     "%time\n",
@@ -216,7 +222,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -235,7 +244,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -250,21 +263,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
