19章翻译完毕

--- a/已经翻译的讲座内容/Topic19_Native_Code_Compilation/C Bootcamp.ipynb
+++ b/已经翻译的讲座内容/Topic19_Native_Code_Compilation/C Bootcamp.ipynb
@@ -429,11 +429,13 @@
     "\n",
     "```c\n",
     "int c = 10;\n",
-    "c++; // same as c = c + 1, i.e., c is now 11\n",
-    "c--; // same as c = c - 1, i.e.. c is now 10 again\n",
+    "c++; // 等价于 c = c + 1, i.e., c 现在就已经是 11\n",
+    "c--; // 等价于 c = c - 1, i.e.. c 又变成了 10 了\n",
     "```\n",
     "\n",
-    "There are two forms of the incremanet operator - postfix ```c++``` and prefix ```++c```. Both increemnt the varible, but in an expressino, the postfix veersion returns the value before the increment and the prefix returns the value after the increment.\n",
+    "实际上存在两种形式的双加号运算符，一种是放到变量后面的 `c++` ，一种是放到前面的 `++c`。这两种都是对变量进行加一的操作，不过还有区别，后置的 `c++` 作为一个表达式，先返回原来未被加一的值，然后再进行加一运算，而前置的 `++c` 则是先加一，然后再返回值。\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -492,20 +494,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ternary operator\n",
+    "#### 三元运算符，Ternary operator\n",
     "\n",
-    "The ternary operator `expr = condition ? expr1 : expr2` allows an if-else statement to be put in a single line. In English, this says that if condition is True, expr1 is assigned to expr, otherwise expr2 is assigned to expr. We used it in the tutorial code to print a comma between elements in a list unless the elememnt was the last one, in which case we printed a new line '\\n'.\n",
+    "三元运算符 `expr = condition ? expr1 : expr2`  是在一行内实现了一个简单的 if-else 的语句。直接用英语来读都很好理解，就是如果条件为真，就用 expr1 来复制给 expr，否则就用 expr2。 在样例代码里面用到过这个表达式，用来在列表中每个元素之间打印一个逗号，而如果到了结尾就不用逗号而是打印换行符'\\n'。\n",
     "\n",
-    "Note: There is a similar ternary construct in Python `expr = expr1 if condition else epxr2`."
+    "\n",
+    "注意：这个和 Python 里面的三元运算符的结构很相似 `expr = expr1 if condition else epxr2`。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Control of program flow\n",
+    "### 流程控制，Control of program flow\n",
     "\n",
-    "Very similar to Python or R. The examples below should be self-explanatory."
+    "C语言里面的程序流的控制也和 Python 或者 R 里面差不多。下面就是一个例子，看着代码就应该能理解了。\n"
    ]
   },
   {
@@ -559,8 +562,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Automatic arrays\n",
-    "If you know the size of the arrays at initialization (i.e. when the program is first run), you can usually get away with the use of fixed size arrays for which C will automatically manage memory for you.\n",
+    "#### 自动化数组，Automatic arrays\n",
+    "\n",
+    "如果你在初始化的时候就确定了数组的规模，就可以使用固定规模的数组来读取数组元素，C 语言会自动帮你管理内存。\n",
     "\n",
     "```c\n",
     "int len = 3;\n",
@@ -575,20 +579,29 @@
     "double ys[] = {1, 2, 3};\n",
     "```\n",
     "\n",
-    "### Pointers\n",
-    "Otherwise, we have to manage memory ourselves using pointers. Bascially, memory in C can be auotmatic, static or dynamic. Variables in automatic memory are managed by the computer, when it goes out of *scope*, the varible disappears. Static variables essentially live forever. Dynamic memory is allocated in the *stack*, and you manage its lifetime. \n",
+    "### 指针，Pointers\n",
     "\n",
-    "Mini-glossary:\n",
-    "* **scope**: Where a variable is visible - basically C variables have *block* scope - variables either live within a pair of curly braces (inlucdes variables in parentheses just before block such as function arguments and the counter in a for loop), or they are visible thorughout the file.\n",
-    "* **stack**: Computer memory is divided into a stack (small) and a heap (big). Automatic varianbles are put on the stack; dynamcic variables are put in the heap. Hence if you have a very large array, you would use dynamic memory allocation even if you knwe its size at initialization. \n",
+    "如果你不能事先确定数组规模，那就要自己用指针来管理内存了。简单来说，C 语言里面的内存可以自动分配、静态分配 或者动态分配。自动分配的内存中，变量是由计算机管理的，如果越界（out of scope），就消失了。静态分配内存的变量可以一直存在。动态分配的内存存储在堆栈（stack）中，你可以设置其生命周期。\n",
     "\n",
-    "Any variable in memory has an address represented as a 64-bit integer in most operating systems. A pointer is basically an integer containing the address of a block of memory. This is what is returned by functions such as `malloc`. In C, a pointer is dentoed by '*'. However, the '*' notation is confusing because its interpreation depends on whehter you are using it in a declaraiton or not. In a declaration\n",
+    "\n",
+    "简单介绍关键词，Mini-glossary:\n",
+    "* **作用域scope**：变量可见的内存位置就叫作用域；在 C 语言中变量基本上是存在于 block （块作用域）之中的 - 一对大括号之内的变量（在某些情况下也包含大括号之前的变量，例如函数的参数，或者 for 循环中的计数器等），或者哪些在整个文件中都可见的变量。\n",
+    "\n",
+    "* **堆栈stack**：计算机内存还分为栈（小，stack）和堆（大，heap）。 自动变量放在栈上; 动态变量被放在堆中。 因此，如果你有一个非常大的数组，可能你也需要使用动态内存分配，即使你在初始化时知道它的大小。\n",
+    "\n",
+    "在目前主流操作系统里，变量在内存中的地址普遍是用一个 64bit 的整数来表示的。\n",
+    "指针基本上就可以看作是一个包含了某块内存的地址的整数。`malloc` 这种函数所返回的值也是如此。在 C 语言里面，指针用一个星号 '*' 表示。不过这个 '*' 符号有时候可能会让人犯糊涂，因为具体的表述形式还要看你使用它的位置是在声明中还是其他位置。\n",
+    "在声明中：\n",
+    "\n",
     "```c\n",
-    "int *p = malloc(sizeof(int)); // p is a pointer to an integer\n",
-    "*p = 5; // *p is an integer\n",
+    "int *p = malloc(sizeof(int)); // p 是一个指向一个 整数 的指针 pointer to an integer\n",
+    "*p = 5; // *p 是一个整数 integer\n",
     "```\n",
     "\n",
-    "To get the actual address value, we can use the `&` address opertor. This is often used so that a function can alter the value of an argument passed in (e.g. see address.c below)."
+    "要得到某个确定的地址的值，可以使用 `&`地址运算符。这个经常用于让函数能够改变传递来的参数的值之类的情况中，例如下面这个 address.c 中所示。\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -702,8 +715,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pointers (continued)\n",
-    "If we want to store a whole sequence of ints, we can do so by simply allocating more memory:\n",
+    "### 指针（续），Pointers (continued)\n",
+    "\n",
+    "如果要存储整个一系列的多个整数值，可以简单地通过分配更多内存来实现：\n",
     "\n",
     "```c\n",
     "int *ps = malloc(5 * sizeof(int)); // p is a pointer to an integer\n",
@@ -712,7 +726,9 @@
     "}\n",
     "```\n",
     "\n",
-    "The computer will find enough space in the heap to store 5 consecutive integers in a **contiguour** way. Since C arrays are all fo the same type, this allows us to do **pointer arithmetic** - i.e. the pointer `ps` is the same as `&ps[0]` and `ps + 2` is the same as `&ps[2]`. An example at this point is helpful."
+    "上面这段代码执行效果是，计算机会在堆（heap）中找到足够的空间来连续存储五个连续的整数。由于 C 的数组都是同一类型的，\n",
+    "所以我们就可以进行指针运算（pointer arithmetic），也就是说，`ps`这个指针的位置等同于 `&ps[0]`，而`ps + 2` 就等价于 `&ps[2]`。下面这个例子有助于理解这一点。\n",
+    "\n"
    ]
   },
   {
@@ -772,9 +788,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pointers and arrays\n",
+    "### 指针和数组，Pointers and arrays\n",
     "\n",
-    "An array name is actualy just a constant pointer to the address of the beginning of the array. Hence, we can derferecne an array name just like a pointer. We can also do pointer arithmetic with array names - this leads to the following legal but weird syntax:\n",
+    "一个数组的名字实际上就是一个指向这个数组第一个元素的指针。因此，我们可以将数组名字当作一个指针来逆向引用。我们也可以对数组名字来进行指针运算，这就导致了下面这种看上去很怪异的表达式合乎语法了：\n",
     "\n",
     "```c\n",
     "arr[i] = *(arr + i) = i[arr]\n",
@@ -829,15 +845,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pointers (continued)\n",
+    "### 指针（续），Pointers (continued)\n",
     "\n",
-    "**Differnt kinds of nothing**: There is a special null pointer indicated by the keyword NULL that points to nothing. It is typically used for pointer comparisons, since NULL pointers are guaranteed to compare as not equal to any other pointer (including another NULL). In paticular, it is often used as a sentinel value to mark the end of a list. In contrast a void pointer (void \\*) points to a memory location whose type is not decalred. It is used in C for generic operations - for example, `malloc` returns a void pointer. To totally confuse the beginning C student, there is also the NUL keyword, which refers to the `'\\0'` character used to terminate C strings. NUL and NULL are totally differnet beasts.\n",
+    "**不同的空（nothing）**: \n",
+    "有一种特别的空指针，用关键词 NULL 表示，不指向人和便利。这个 NULL 通常用于指针的比较当中，因为 NULL 指针的一个特点是和任何其他指针相比较都是不相等的，包括和另外一个 NULL 作比较，两者也是不相等。在实践中，这个 NULL 通常被用作一个列表的结尾的标记变量。\n",
+    "与之相对比的，另外一个 void 指针(void \\*) 指向的则是未声明类型的内存位置。这个 void 指针往往用于 C语言的通用运算符（generic operations）中，例如 `malloc` 就返回一个 void 指针。还有更让新手一头雾水的，就是关键词 NUL 还可以指代 `'\\0'` 这个字符，在 C 语言里面表示一个字符串的结尾。所以一定要注意 NUL 和 NULL 是全然不同的两码事。\n",
     "\n",
-    "**Deciphering pointer idioms**: A common C idiom that you should get used to is `*q++ = *p++` where p and q are both pointers. In English, this says\n",
     "\n",
-    "* \\*q = \\*p (copy the variable pointed to by p into the variable pointed to by q)\n",
-    "* increment q\n",
-    "* increment p"
+    "\n",
+    "**解译指针语法（Deciphering pointer idioms）**: \n",
+    "在 C 语言里面常见到的一种表达式是 `*q++ = *p++` ，其中的 p 和 q 都是指针。用人类语言来解释起来这个语句表达的过程是这样的：\n",
+    "\n",
+    "* \\*q = \\*p (将由p指向的变量复制到q指向的变量中，copy the variable pointed to by p into the variable pointed to by q)\n",
+    "* 自增（increment） q\n",
+    "* 自增（increment） p"
    ]
   },
   {
@@ -911,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functions"
+    "### 函数，Functions"
    ]
   },
   {
@@ -967,25 +988,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function pointers\n",
+    "### 函数指针，Function pointers\n",
     "\n",
-    "How to make a nice function pointer: Start with a regular function declaration func, for example, here func is a function that takes a pair of ints and returns an int\n",
+    "如何创建一个完整的函数指针呢？最开始还是先进行函数声明，例如这里的 func 就是一个函数，接收一对整数，返回值是一个整数：\n",
     "\n",
     "```\n",
     "int func(int, int);\n",
     "```\n",
     "\n",
-    "To turn it to a function pointer, just add a `*` and wrap in parenthesis like so\n",
+    "\n",
+    "要把这个函数变为函数指针，只需要作如下修改，括号括上，再加个小星星`*`在里面：\n",
     "\n",
     "```\n",
     "int (*func)(int, int);\n",
     "```\n",
     "\n",
-    "Now `func` is a pointer to a funciton that takes a pair of ints and returns an int. Finally, add a typedef so that we can use `func` as a new type\n",
+    "这样`func`就是指向一个函数的指针，这个函数接收一对整数，返回一个整数。最后，使用 typedef，我们就可以把 `func` 用作一个新的类型了。\n",
+    "\n",
     "```\n",
     "typedef int (*func)(int, int);\n",
     "```\n",
-    "which allows us to create arrays of function pointers, higher order functions etc as shown in the following example."
+    "\n",
+    "这样我们就可以创建一个函数指针的数组，高阶函数等等，接下来就是一个例子了。"
    ]
   },
   {
@@ -1006,10 +1030,10 @@
     "#include <stdio.h>\n",
     "#include <math.h>\n",
     "\n",
-    "// Create a function pointer type that takes a double and returns a double\n",
+    "// 创建一个函数指针类型，接收一个双精度浮点数 double，返回的也是一个双精度浮点数 double\n",
     "typedef double (*func)(double x);\n",
     "\n",
-    "// A higher order function that takes just such a function pointer\n",
+    "// 一个高阶函数接收这样的一个函数指针做参数\n",
     "double apply(func f, double x)\n",
     "{\n",
     "    return f(x);\n",
@@ -1061,19 +1085,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using make to compile C programs\n",
+    "### 使用 make 来编译 C 语言程序\n",
     "\n",
-    "As you have seen, the processs of C program compilation can be quite messy, with all sorts of different compiler and linker flags to specify, libraries to add and so on. For this reason, most C programs are compiled using the `make` built tool that you are already familiar with. Here is a simple generic makefile that you can customize to compile your own programs adapted from the book 21st Centur C by Ben Kelmens (O'Reilly Media).\n",
+    "估计你也已经见识过了，C语言程序的编译过程可能会超级麻烦，各种各样不同的编译器啊、连接器啊、还有设置参数啊、添加链接库啊等等。所以呢，大多数的 C 语言程序都是使用`make`构建工具来编译的，这个估计你也很熟悉了。\n",
+    "下面是简单的一个通用的 makefile 样例，你可以在此基础上进行定制来编译生成你自己的程序，参考 Ben Kelmens 缩写的 《21世纪 C语言》(21st Century C)(O'Reilly 公司出版)。\n",
     "\n",
-    "* **TARGET**: Typically the name of the execuatble\n",
-    "* **OBJECTS**: The intemediate object files - typically there is one file.o for every file.c\n",
-    "* **CFLAGS**: Compiler flags, e.g. -Wall (show all warnings), -g (add debug information), -O3 (use level 3 optimization). Also used to indicate paths to headers in non-standard locations, e.g. -I/opt/include\n",
-    "* **LDFLAGS**: Linker flags, e.g. -lm (link agains the libmath library). Alos used to indicate pahts to libaries in non-standard locations, e.g. -L/opt/lib\n",
-    "* **CC**: Compiler, e.g. gcc or clang or icc\n",
     "\n",
-    "In addition, there are traiditonal dummy flags\n",
-    "* **all**: Builds all targets (for example, you may also have html and pdf targets that are optional)\n",
-    "* **clean**: Remove intermediate and final products generated by the makefile"
+    "* **TARGET**: 一般是设置为可执行文件的名字；\n",
+    "* **OBJECTS**: 各种中间对象文件（intemediate object files），通常是对应每个 C 文件都有一个 o 文件，例如 file.c 就要对应有一个 file.o；\n",
+    "* **CFLAGS**: 编译器参数，例如 -Wall (显示所有warnings), -g (添加 debug 信息), -O3 (使用 level 3 优化)；也可能用于添加一些非标准库的头文件所在位置，例如 -I/opt/include；\n",
+    "* **LDFLAGS**: 连接器参数，例如 -lm (连接 libmath 库)；也可能用于只是非标准库文件所在位置，例如 -L/opt/lib；\n",
+    "* **CC**: 编译器，例如 gcc ，或 clang， 或者 icc。\n",
+    "\n",
+    "除了上面的这些，经常还有其他的一些傻瓜化参数（dummy flags）\n",
+    "* **all**: 构建所有目标 (例如你可能可选生成 html 还是 pdf，选用 all 就会一律生成了)；\n",
+    "* **clean**: 已出 makefile 生成的所有中间文件和最终产物，就是清理了。"
    ]
   },
   {
@@ -1109,7 +1135,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just fill in the blanks with whatever is appropriate for your program. Here is a simple example where the main file `test_main.c` uses a function from `stuff.c` with declarations in `stuff.h` and also depends on the libm C math library."
+    "将上面的各个空白填写好，要适应你自己的程序，就可以了。\n",
+    "下面接下来的是一个简单样本，其中的主文件是 `test_main.c`，使用了一个 `stuff.c` 中的函数，这个函数还声明使用了`stuff.h`，并且还依赖于libm C语言数学库。"
    ]
   },
   {
@@ -1298,9 +1325,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Debugging programs (understanding compiler warnings and errors + use of gdb)\n",
+    "### 调试程序（理解编译器的警告和错误信息，使用 gdb）\n",
     "\n",
-    "Try to fix the following buggy program."
+    "试着将下面这个充满 bug 的程序修改正确。"
    ]
   },
   {
@@ -1412,18 +1439,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why not C? \n",
+    "### 为什么不用 C语言？\n",
     "\n",
-    "What other language has an annual Obfuscated Code Contest <http://www.ioccc.org/>? In particular, the following features of C are very conducive to writing unreadable code:\n",
+    "其他编程语言都有年度一次的混淆代码竞赛（Obfuscated Code Contest <http://www.ioccc.org/>）。\n",
+    "下面的一些特性让 C 语言 很适合写出不可读的代码：\n",
     "\n",
-    "* lax rules for identifiers (e.g. _o, _0, _O, O are all valide identifiers)\n",
-    "* chars are bytes and pointers are integers\n",
-    "* pointer arithmetic means that `array[index]` is the same as `*(array+index)` whihc is the same as `index[array]`!\n",
-    "* lax formatting rules especially with respect to whitespace (or lack of it)\n",
-    "* Use of the comma operator to combine multiple expressions together with the ?: operator\n",
-    "* Recursive function calls - e.g. main calling main repeatedly is legal C\n",
+    "* 松散的标识符命名规则 (例如 _o, _0, _O, O 这些都是可用的命名)。\n",
+    "* 字符 char 是字节 bytes，而指针 pointer 是整数 integers。\n",
+    "* 指针运算符（pointer arithmetic）意味着 `array[index]` 等价于 `*(array+index)` 也等价于 `index[array]`!\n",
+    "* 松散的格式化规则，对空格 whitespace 甚至没有任何规则。\n",
+    "* 使用逗号运算符可以将多个表达式与？：运算符组合在一起。\n",
+    "* 递归的函数调用（Recursive function calls），例如，在 C语言里面，main 函数调用 main 函数是合乎语法的。\n",
     "\n",
-    "Here is one winning entry from the 2013 IOCCC [entry](http://www.ioccc.org/2013/dlowe/hint.html) that should warm the heart of statisticians - it displays sparklines (invented by Tufte).\n",
+    "下面是 2013年 IOCCC 的一个获胜作品 [entry](http://www.ioccc.org/2013/dlowe/hint.html) ，这个代码的效果是显示 Tufte 提出的 sparklines，统计学家看了估计会觉得贴心吧。\n",
     "\n",
     "```c\n",
     "main(a,b)char**b;{int c=1,d=c,e=a-d;for(;e;e--)_(e)<_(c)?c=e:_(e)>_(d)?d=e:7;\n",
@@ -1501,8 +1529,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have too much time on your hands and really want to know how **not** to write C code (unless you are crafting an entry for the IOCCC), I recommend this tutorial\n",
-    "<http://www.dreamincode.net/forums/topic/38102-obfuscated-code-a-simple-introduction/>"
+    "如果你真是闲得没事干就像去了解那些写 C语言程序应该避免的事项，我推荐你试试下面这个教程：\n",
+    "<http://www.dreamincode.net/forums/topic/38102-obfuscated-code-a-simple-introduction/>\n",
+    "\n"
    ]
   },
   {
